--- a/app/src/main/res/layout/activity_sign_up_3.xml
+++ b/app/src/main/res/layout/activity_sign_up_3.xml
@@ -7,60 +7,24 @@
     android:background="@color/register_screen_background_color"
     android:orientation="vertical">
 
-    <ProgressBar
-        android:id="@+id/signUp_progressCircle_3"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        />
+    <FrameLayout
+        android:id="@+id/signin_dimmer"
+        android:background="@color/black"
+        android:alpha="0.5"
+        android:elevation="10dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <!--<ImageView-->
-        <!--android:id="@+id/iv_ca_logo"-->
+    </FrameLayout>
+
+    <!--<ProgressBar-->
+        <!--android:id="@+id/signUp_progressCircle_3"-->
+        <!--android:layout_width="100dp"-->
+        <!--android:layout_height="100dp"-->
+        <!--android:layout_centerVertical="true"-->
         <!--android:layout_centerHorizontal="true"-->
-        <!--android:src="@drawable/careeranna_logo_transparent"-->
-        <!--android:layout_marginTop="35dp"-->
-        <!--android:layout_gravity="center"-->
-        <!--android:layout_width="200dp"-->
-        <!--android:layout_height="55dp" />-->
+        <!--/>-->
 
-    <!--<com.shobhitpuri.custombuttons.GoogleSignInButton-->
-    <!--android:id="@+id/bt_google_sign_in_button"-->
-    <!--android:layout_above="@id/fb_login_button_2"-->
-    <!--android:textAlignment="center"-->
-    <!--android:layout_gravity="center"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="45dp"-->
-    <!--android:layout_marginLeft="30dp"-->
-    <!--android:layout_marginRight="30dp"-->
-    <!--android:layout_marginTop="60dp"-->
-    <!--android:text="Login with Google"-->
-    <!--&gt;-->
-    <!--</com.shobhitpuri.custombuttons.GoogleSignInButton>-->
-
-    <!--<com.facebook.login.widget.LoginButton-->
-    <!--android:id="@+id/fb_login_button_2"-->
-    <!--android:layout_above="@id/Middle"-->
-    <!--android:layout_marginBottom="25dp"-->
-    <!--android:paddingBottom="10dp"-->
-    <!--android:layout_gravity="center"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_height="wrap_content"-->
-    <!--android:paddingTop="13dp"-->
-    <!--android:layout_marginLeft="33dp"-->
-    <!--android:layout_marginRight="33dp"-->
-    <!--android:layout_marginTop="12dp"-->
-    <!--/>-->
-
-    <!--<View-->
-    <!--android:id="@+id/Middle"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:layout_marginLeft="10dp"-->
-    <!--android:layout_marginRight="10dp"-->
-    <!--android:layout_height="1px"-->
-    <!--android:layout_centerInParent="true"-->
-    <!--android:background="@android:color/white"-->
-    <!--/>-->
 
     <TextView
         android:id="@+id/signin_3_continueWith"
